# uvmono

./: LICENSE  Makefile  README.md
libs/lib-a/: pyproject.toml
libs/lib-a/src/lib_a/: info.py  req.py
libs/lib-b/: pyproject.toml
libs/lib-b/src/lib_b/: calc.py  info.py
libs/lib-b/tests/unit/: test_info.py
services/service-1/: main.py  pyproject.toml
services/service-2/: main.py  pyproject.toml
services/service-2/tests/unit/: test_main.py
services/service-abc/: Dockerfile  compose.yaml  main.py  pyproject.toml
services/service-xyz/: Makefile  main.py  pyproject.toml
