[project]
name = "lib-a"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "htonym", email = "thoff88@yahoo.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
